fixed nav on small screen

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -97,7 +97,7 @@
   }
 }
 
-@media (max-width: 250px) {
+@media (max-width: 280px) {
   .navbar-links {
     flex-wrap: wrap;
     align-items: center;
